--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* index.css */
+.header {
+  background-color: #abcde4;
+  padding: 8px;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 3px solid #2980b9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-size: 27px;
+  color: white;
+  margin-bottom: 10px;
+  margin-left: 45px;
 }
+
+.home-icon a{
+  display: flex;
+  align-items: center;
+  margin-left: 650px;
+  margin-top: 10px;
+  color: black;
+  font-size: 20px;
+  padding: 8px 8px;
+  text-decoration: none;
+  background-color: #abcde4;
+}
+
+.about-icon a{
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+  margin-top: 10px;
+  color: black;
+  font-size: 20px;
+  padding: 8px 8px;
+  text-decoration: none;
+  background-color: #abcde4;
+}
+
+.header a:hover {
+  background-color: #bbdbf0; 
+}
+.header a:hover {
+  cursor: pointer;
+}
+
+.home-icon span {
+  margin-left: 8px;
+  font-size: 17px;
+  margin-top: 5px;
+}
+
+.about-icon span {
+  margin-left: 8px;
+  font-size: 17px;
+  margin-top: 5px;
+}
+
+.body {
+  background-color: #f8f9f5;
+  padding: 21% 50%;
+}
+.wide-box{
+  padding: 55px 290px;
+  margin-top: -230px;
+  margin-left: -285px;
+  border-radius: 8px;
+  background-color:#f2eee1 ;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  position: absolute;
+  left: 461px; 
+  cursor: pointer;
+}
+
+.search-input {
+  padding: 13px 90px;
+  border: none;
+  border-radius: 5px;
+  margin-left: -158px; 
+  outline: none;
+  
+}
+
