--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ p {
   border-radius: 8px;
   margin-top: 70px;
   margin-left: -240px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-container1{
@@ -109,7 +109,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -347px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-container2{
@@ -123,7 +123,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -347px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-container3{
@@ -137,7 +137,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -347px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-box4{
@@ -145,7 +145,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -347px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-box5{
@@ -153,7 +153,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -347px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .chart-container6{
@@ -167,7 +167,7 @@ p {
   border-radius: 8px;
   margin-top: 20px;
   margin-left: -575px;
-  background-color: #f2eee1;
+  background-color: #f1e8cd;
 }
 
 .search-container {
